add retail product

--- a/products/CMakeLists.txt
+++ b/products/CMakeLists.txt
@@ -1,1 +1,5 @@
 add_library(product product.hpp product.cpp)
+
+add_library(retail_product retail_product.hpp retail_product.cpp)
+
+target_link_libraries(retail_product product)
