--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(products)
+add_subdirectory(logic)
 add_subdirectory(test)
 
-target_link_libraries(tests retail_product wholesale_product)
+target_link_libraries(tests retail_product wholesale_product warehouse)
 
