--- a/logic/CMakeLists.txt
+++ b/logic/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(warehouse warehouse.hpp warehouse.cpp)
-
-target_link_libraries(warehouse product retail_product wholesale_product)
+find_package(TBB REQUIRED)
+target_link_libraries(warehouse product retail_product wholesale_product TBB::tbb)
